[gd_scene load_steps=5 format=3 uid="uid://7wggm07bbvjj"]

[ext_resource type="Texture2D" uid="uid://djmrox3cqnntc" path="res://icon.svg" id="1_e4se4"]
[ext_resource type="Script" path="res://Battle/Battle.gd" id="1_qx2jm"]
[ext_resource type="PackedScene" uid="uid://c8fsus475b5lt" path="res://Battle/skills/attack_button.tscn" id="4_37ghq"]
[ext_resource type="PackedScene" uid="uid://b1kf3tsi84npu" path="res://Battle/skills/skill_button.tscn" id="4_x63w7"]

[node name="Battle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qx2jm")

[node name="EnemyPosition" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1064.0
offset_top = 32.0
offset_right = -48.0
offset_bottom = 160.0
grow_horizontal = 0

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SkillGrid" type="GridContainer" parent="UI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -454.0
offset_top = -144.5
offset_right = 454.0
offset_bottom = 144.5
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="AttackButton" parent="UI/SkillGrid" instance=ExtResource("4_37ghq")]
layout_mode = 2

[node name="SkillButton" parent="UI/SkillGrid" instance=ExtResource("4_x63w7")]
layout_mode = 2

[node name="SkillButton2" parent="UI/SkillGrid" instance=ExtResource("4_x63w7")]
layout_mode = 2

[node name="SkillButton3" parent="UI/SkillGrid" instance=ExtResource("4_x63w7")]
layout_mode = 2

[node name="SkillButton4" parent="UI/SkillGrid" instance=ExtResource("4_x63w7")]
layout_mode = 2

[node name="DebugButton" type="Button" parent="UI/SkillGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Replace"

[node name="PlayerPosition" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = -56.0
grow_vertical = 0

[node name="PlayerTexture" type="TextureRect" parent="UI/PlayerPosition"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -128.0
offset_right = 128.0
grow_vertical = 0
texture = ExtResource("1_e4se4")

[node name="PlayerStatsPanel" type="Panel" parent="UI/PlayerPosition"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 136.0
offset_top = -128.0
offset_right = 256.0
offset_bottom = -28.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PlayerPosition/PlayerStatsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerHealthBar" type="ProgressBar" parent="UI/PlayerPosition/PlayerStatsPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="EnergyLabel" type="Label" parent="UI/PlayerPosition/PlayerStatsPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "3 Energy"
horizontal_alignment = 1

[node name="EndTurnButton" type="Button" parent="UI"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -244.0
offset_top = -160.0
offset_right = -44.0
offset_bottom = -60.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "End Turn"

[connection signal="pressed" from="UI/SkillGrid/DebugButton" to="." method="_on_DebugButton_pressed"]
[connection signal="pressed" from="UI/EndTurnButton" to="." method="_on_EndTurnButton_pressed"]
